# echoserver

./: CMakeLists.txt  Makefile  README.md
inc/: echoserver.h
inc/foo/: opcoes.h
src/: echoserver_loop.c  echoserver_main.c  projetoechomulti.c  servercho.c
